Changed inventory,product and websecurityconfig also....